test/golden/3420956872570442319.golden

INITIALPATH:7:22: error:
    • INITIALPATH:7:30:
  |
7 | main = putStrLn [fmt|{hello:,s}|]
  |                              ^
unexpected: "s"
expecting: "."
String type is incompatible with grouping (_ or ,).

    • In the quasi-quotation: [fmt|{hello:,s}|]
  |
7 | main = putStrLn [fmt|{hello:,s}|]
  |                      ^^^^^^^^^^^^
